--- a/database.yaml
+++ b/database.yaml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: host
+  name: database
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      host: web
+      database: web
   template:
     metadata:
       labels:
-        host: web
+        database: web
     spec:
       containers:
-      - name: host-site
+      - name: database-site
         image: rattrapagecloud/host:02
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: host-balancer
+  name: database-entrypoint
   namespace: default
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
-    app: host
+    database: web
   ports:
   - port: 8080
     targetPort: 8080
-status:
-  loadBalancer:
-    ingress:
-    - ip: 192.0.2.127
+    nodePort: 30003
+
+
