--- a/server.yaml
+++ b/server.yaml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: host
+  name: server
   namespace: default
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      host: web
+      server: web
   template:
     metadata:
       labels:
-        host: web
+        server: web
     spec:
       containers:
-      - name: host-site
+      - name: server-site
         image: rattrapagecloud/host:02
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: host-balancer
+  name: server-entrypoint
   namespace: default
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
-    app: host
+    server: web
   ports:
   - port: 8080
     targetPort: 8080
-status:
-  loadBalancer:
-    ingress:
-    - ip: 192.0.2.127
+    nodePort: 30002
+
+
